# tensorrt-plugin-autoresearch

./: CMakeLists.txt  README.md  build.sh  claude-auto.sh  v1.md
.claude/skills/trt-plugin-kernel-latency-auto-opt/: SKILL.md
.claude/skills/trt-plugin-kernel-latency-auto-opt/scripts/: common.sh  compile.sh  copy_baseline.sh  get_baseline_latency.sh  start_compare.sh  start_ncu.sh  start_nsys.sh
cmake/: .gitignore  basic.cmake  options.cmake  set_ifndef.cmake  set_version.cmake  toolchain.cmake
src/: CMakeLists.txt  c_api.h  main.cpp
src/fused_sca_deform_attn/: CMakeLists.txt  c_api.cpp  config.json  fused_sca_deform_attn.cu  fused_sca_deform_attn.h  fused_sca_deform_attn_plugin.cpp  fused_sca_deform_attn_plugin.h
src/multiscale_deformable_attn/: c_api.cpp  config.json  multiscale_deformable_attention.h  multiscale_deformable_attention_fp32.cu  multiscale_deformable_attention_half.cu  multiscale_deformable_attention_plugin.cpp  multiscale_deformable_attention_plugin.h
src/pillarvfe/: CMakeLists.txt  c_api.cpp  config.json  pillarVFE.cpp  pillarVFE.h  pillarVFEKernels.cu  vfe_kernel.h
src/utils/: cfg_parser.cpp  cfg_parser.h  checkMacros.h  common.cpp  common.h  cudaMacros.h  data_fill.cpp  data_fill.h  dylib.cpp  dylib.h  helper_bin.h  helper_cuda.h  helper_device.h  helper_tensor.h  helper_time.h  helper_trt.h  ipc.cpp  ipc.h  logger.h  stringUtils.cpp  stringUtils.h  tensor.cpp  tensor.h  tensorUtils.cpp
